--- a/front-end/package.json
+++ b/front-end/package.json
@@ -44,6 +44,7 @@
     "react-native-ui-lib": "^7.39.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "tailwind-react-native-classnames": "^3.0.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
