--- a/front-end/package.json
+++ b/front-end/package.json
@@ -35,6 +35,7 @@
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
@@ -45,7 +46,10 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwind-react-native-classnames": "^3.0.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "expo-asset": "~11.0.5",
+    "expo-file-system": "~18.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
