--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,16 +16,21 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.49.4",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.43",
+    "expo-asset": "~11.0.5",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
@@ -46,10 +51,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwind-react-native-classnames": "^3.0.1",
-    "tailwindcss": "^3.4.17",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "expo-asset": "~11.0.5",
-    "expo-file-system": "~18.0.12"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
