--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,9 +21,9 @@
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.49.4",
+    "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.13",
     "expo": "~52.0.43",
-    "expo-asset": "~11.0.5",
     "expo-asset": "~11.0.5",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
@@ -53,7 +53,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwind-react-native-classnames": "^3.0.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "react-native-get-random-values": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
